// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render a configured header 1`] = `
<div
  className="gf-form-group"
>
  <div
    className="gf-form"
  >
    <h6>
      Custom HTTP Headers
    </h6>
  </div>
  <div>
    <div
      className="gf-form-inline"
      key="0"
    >
      <div
        className="gf-form"
      >
        <FormField
          defaultValue="X-Custom-Header"
          inputWidth={12}
          label="Header"
          labelWidth={5}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
        />
      </div>
      <div
        className="gf-form"
      >
        <SecretFormField
          inputWidth={11}
          isConfigured={true}
          label="Value"
          labelWidth={5}
          name="value"
          onBlur={[Function]}
          onChange={[Function]}
          onReset={[Function]}
          placeholder="Header Value"
          value=""
        />
      </div>
      <div
        className="gf-form"
      >
        <Button
          onClick={[Function]}
          size="xs"
          variant="danger"
        >
          <i
            className="fa fa-remove"
          />
        </Button>
      </div>
    </div>
  </div>
  <div
    className="gf-form"
  >
    <Button
      onClick={[Function]}
      size="xs"
      variant="inverse"
    >
      Add Header
    </Button>
  </div>
</div>
`;

exports[`Render should render component 1`] = `
<div
  className="gf-form-group"
>
  <div
    className="gf-form"
  >
    <h6>
      Custom HTTP Headers
    </h6>
  </div>
  <div />
  <div
    className="gf-form"
  >
    <Button
      onClick={[Function]}
      size="xs"
      variant="inverse"
    >
      Add Header
    </Button>
  </div>
</div>
`;
